--- a/Hangman.Tests/Hangman.Tests.csproj
+++ b/Hangman.Tests/Hangman.Tests.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{8EDF4429-251A-416D-BB68-93F227191BCF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>gr.devian.Hangman.Tests</RootNamespace>
+    <RootNamespace>devian.gr.Hangman.Tests</RootNamespace>
     <AssemblyName>Hangman.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
